fix(daily): fix dropdown on daily being off-centre

--- a/src/components/game/GameSlide.module.css
+++ b/src/components/game/GameSlide.module.css
@@ -15,6 +15,11 @@
   }
 }
 
+.episodeDropdown {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .secondsCounter {
   font-size: 18pt;
   margin: 0.5rem 0 1rem 0;
